feat: 🎸 add a app root reference for mamba-pkgs packages

--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -43,6 +43,8 @@
     },
     oncreate() {
       const { root } = this;
+      // add a root point for mamba-pkgs packages
+      window.$MAMBA = this;
 
       const { target } = this.root.options;
 
