--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -43,8 +43,11 @@
     },
     oncreate() {
       const { root } = this;
-      // add a root point for mamba-pkgs packages
-      window.$MAMBA = this;
+
+      // add a app root reference for mamba-pkgs packages case webpack fails
+      if(!window.$MAMBA) {
+        window.$MAMBA = this;
+      }
 
       const { target } = this.root.options;
 
