--- a/packages/components/Flatlist/FlatList.html
+++ b/packages/components/Flatlist/FlatList.html
@@ -211,6 +211,7 @@
 
         if(!intersect) this.fire(EVENTS.ITEM_SELECTED, eventData);
 
+        const { disabled } = this.get();
         if(disabled === false && 'onSelected' in data && typeof data.onSelected === 'function') {
           return data.onSelected(eventData);
         }
