--- a/packages/components/Input/Money.html
+++ b/packages/components/Input/Money.html
@@ -3,7 +3,7 @@
   {..._inputProps}
   validation={_validation}
   bind:isValid
-  bind:value="_value"
+  bind:value="formatted"
   on:keyup
   on:input
   on:blur
@@ -44,7 +44,7 @@
         validation,
         ...props
       }) => props,
-      _value: ({ prefix, suffix, value = '0', limit }) => {
+      formatted: ({ prefix, suffix, value = '0', limit }) => {
         const parsedMoney = parseFloat(value) / 100;
         const isValidNumber = !Number.isNaN(parsedMoney);
         const returnFactory = (money = 0) => {
@@ -61,7 +61,9 @@
 
         return returnFactory();
       },
-      /** deprecated */
+      /**
+       * @deprecated
+       */
       rawValue: ({ value }) => value,
     },
     oncreate() {
@@ -109,8 +111,8 @@
         });
       },
       _onFocus(e) {
-        const { value } = this.get();
-        const endPosition = value.length;
+        const { formatted } = this.get();
+        const endPosition = formatted.length;
 
         setTimeout(() => {
           /**
@@ -129,7 +131,7 @@
         this.fire('focus', e);
       },
       _getSubmissionObj() {
-        const { value, _value: formatted, isValid } = this.get();
+        const { value, formatted, isValid } = this.get();
         return { value, formatted, isValid };
       },
       _onSubmitValid() {
