--- a/packages/components/Input/Input.html
+++ b/packages/components/Input/Input.html
@@ -373,8 +373,12 @@ import defaultTokens from './libs/tokens.js';
 <style type="text/postcss">
   :global(.MP35P),
   :global(.MP35) {
+    .label {
+      font-size: 17px;
+    }
+
     input[type='text'] {
-      font-size: 22px;
+      font-size: 27px;
     }
   }
 
