refactor: 💡 row adapted to small screen

--- a/packages/components/Flatlist/DefaultRow.html
+++ b/packages/components/Flatlist/DefaultRow.html
@@ -242,4 +242,11 @@
   :global(.mb-align-end) {
     align-items: flex-end;
   }
+
+  :global(.MP35P),
+  :global(.MP35) {
+    span {
+      font-size: 20px;
+    }
+  }
 </style>
