--- a/packages/components/Flatlist/components/decorator.html
+++ b/packages/components/Flatlist/components/decorator.html
@@ -41,4 +41,11 @@
     white-space: pre;
     line-height: 15px;
   }
+
+  :global(.MP35P),
+  :global(.MP35) {
+    span {
+      font-size: 20px;
+    }
+  }
 </style>
