--- a/packages/components/Flatlist/NavBar.html
+++ b/packages/components/Flatlist/NavBar.html
@@ -56,7 +56,7 @@
     background-color: #f7fafd;
     display: flex;
     border-top: 2px solid #d5dee8;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
   }
