fix: 🐛 update MP35P classes to has-small-screen

--- a/packages/components/Flatlist/DefaultRow.html
+++ b/packages/components/Flatlist/DefaultRow.html
@@ -243,8 +243,7 @@
     align-items: flex-end;
   }
 
-  :global(.MP35P),
-  :global(.MP35) {
+  :global(.has-small-screen) {
     span {
       font-size: 20px;
     }
