--- a/packages/components/Flatlist/components/decorator.html
+++ b/packages/components/Flatlist/components/decorator.html
@@ -42,8 +42,7 @@
     line-height: 15px;
   }
 
-  :global(.MP35P),
-  :global(.MP35) {
+  :global(.has-small-screen) {
     span {
       font-size: 20px;
     }
