--- a/packages/components/Input/Input.html
+++ b/packages/components/Input/Input.html
@@ -371,8 +371,7 @@ import defaultTokens from './libs/tokens.js';
 </script>
 
 <style type="text/postcss">
-  :global(.MP35P),
-  :global(.MP35) {
+  :global(.has-small-screen) {
     .label {
       font-size: 17px;
     }
