--- a/packages/components/AppBar/AppBar.html
+++ b/packages/components/AppBar/AppBar.html
@@ -152,8 +152,7 @@
 <style type="text/postcss">
   @import '@mamba/styles/settings.pcss';
 
-  :global(.MP35P),
-  :global(.MP35) {
+  :global(.has-small-screen) {
     .title {
       font-size: 18px;
     }
