--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -164,8 +164,7 @@ let lastShortcutsState;
 <style type="text/postcss">
   @import '@mamba/styles/settings.pcss';
 
-  :global(.MP35P),
-  :global(.MP35) {
+  :global(.has-small-screen) {
     .title {
       font-size: 25px;
     }
