--- a/packages/components/Switch/Switch.html
+++ b/packages/components/Switch/Switch.html
@@ -31,8 +31,7 @@
 </script>
 
 <style type="text/postcss">
-  :global(.MP35P),
-  :global(.MP35) {
+  :global(.has-small-screen) {
     .switch {
       width: 35px;
       height: 13px;
