refactor: change internals and components keymap paths and add keyborad native from pos

--- a/packages/components/App/AdminLock.html
+++ b/packages/components/App/AdminLock.html
@@ -31,7 +31,7 @@
 
 <script>
   import Merchant from '@mamba/pos/api/merchant.js';
-  import Keyboard from '@mamba/pos/api/keyboard.js';
+  import Keyboard from '@mamba/keyboard/native/keyboard.js';
 
   export default {
     components: {
@@ -91,7 +91,7 @@
     left: 0;
     width: 100%;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 70%);
     padding: 10px;
   }
 
