--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -15,7 +15,7 @@
 
 <script>
   import App from '@mamba/pos/api/app.js';
-  import Keyboard from '@mamba/pos/api/keyboard.js';
+  import Keyboard from '@mamba/keyboard/native/keyboard.js';
   import { getPosModel, Device } from '@mamba/utils/index.js';
 
   import {
