--- a/packages/components/Input/Money.html
+++ b/packages/components/Input/Money.html
@@ -15,7 +15,7 @@
 />
 
 <script>
-  import Keyboard from '@mamba/pos/api/keyboard.js';
+  import Keyboard from '@mamba/keyboard/native/keyboard.js';
   import { format as formatMoney } from '@mamba/utils/money.js';
 
   export default {
